...
  return (
    <View style={[Atoms.flex_col, Atoms.flex_1]}>
      <View style={[Atoms.flex_1, Atoms.gap_lg, Atoms.min_h_0]}>
        <Text variant="title">Set a display name</Text>
        <View style={Atoms.gap_xs}>
          <TextInput
            placeholder="Enter display name"
            value={data.displayName}
            onChangeText={handleChangeText}
            error={error ? true : false}
            maxLength={MAX_NAME_LENGTH}
            autoCapitalize="words"
            autoFocus
...
            </Text>
          )}
        </View>
      </View>
      <Button
        style={[Atoms.mt_auto, Atoms.mb_md]}
        title={submitting ? 'Creating identity...' : 'Continue'}
        variant="primary"
        disabled={!canContinue || submitting}
        fullWidth
        onPress={handleContinue}
      />
    </View>
...
