...
          },
        ]}
      >
        {isStoragePersistent ? (
          <>
            <Button
              title="Create new identity"
              variant="primary"
              fullWidth
              href={Routes.onboarding.signup.index}
            />
            <Button
              title="I already have an identity"
...
