...
          <Box
            flex={1}
            alignItems="center"
            justifyContent="center"
            padding="lg"
          >
            <Text color="neutralSurface">No posts yet</Text>
          </Box>
        ) : null
      }
    />
  );
}
...
